vercre-issuer/tests/snapshots/pre_authorized:response@deferred.snap
---
source: vercre-issuer/tests/wallet.rs
assertion_line: 136
expression: "&response"
---
transaction_id: "[transaction_id]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"
