vercre-issuer/tests/snapshots/pre_authorized:response@immediate.snap
---
source: vercre-issuer/tests/wallet.rs
assertion_line: 135
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"
