vercre-issuer/tests/snapshots/pre_authorized:response@jwt_vc_json.snap
---
source: vercre-issuer/tests/wallet.rs
assertion_line: 137
expression: "&response"
---
credential: "[credential]"
c_nonce: "[c_nonce]"
c_nonce_expires_in: "[c_nonce_expires_in]"
